@startuml
' Generated by PumlNet - https://github.com/KifoPL/PumlNet
left to right direction
hide empty members

title
My Title
This is 2nd line of a title
end title

header
My Header
end header

footer
~ at %date("yyyy-MM-dd")
end footer


interface "ITest" as PumlNet.Tests.Console.ITest  {
  +string TestProp
  +void TestMethod()
}

interface "ISpecificTest" as PumlNet.Tests.Console.ISpecificTest  {
  +string Info
}


class "TestGeneric<TList, TItem>" as PumlNet.Tests.Console.TestGeneric0TList1TItem {
}

class "Test" as PumlNet.Tests.Console.Test {
  +{static} string? PublicProp
  -string[] PrivateProp
  #List<string> ProtectedProp
  ~string InternalProp
  +string Info
  +string TestProp
  +void DoStuff()
  ~string? AnotherMethod(string param1, int[] param2)
  #string[]? LastTest(IEnumerable<string> test)
}

abstract class "AbstractTest" as PumlNet.Tests.Console.AbstractTest {
  +string TestProp
  +void TestMethod()
}

abstract class "StaticTest" as PumlNet.Tests.Console.StaticTest << (S,#DAA520) >> {
  +{static} ITest Test
  +{static} TestGeneric<string[], string>? TestGeneric
}

class "Test1" as PumlNet.Tests.Console.OtherNamespace.Test1 {
  +List<Test> Tests
  +AbstractTest[] AbstractTests
  #List<string> ProtectedProp
  ~string InternalProp
  +string Info
  +string TestProp
}


PumlNet.Tests.Console.AbstractTest <|-- PumlNet.Tests.Console.Test
PumlNet.Tests.Console.Test <|-- PumlNet.Tests.Console.OtherNamespace.Test1
PumlNet.Tests.Console.ISpecificTest <|.. PumlNet.Tests.Console.Test
PumlNet.Tests.Console.ITest <|.. PumlNet.Tests.Console.AbstractTest
PumlNet.Tests.Console.ITest <|-- PumlNet.Tests.Console.ISpecificTest
PumlNet.Tests.Console.StaticTest "1" -- "1" PumlNet.Tests.Console.ITest
PumlNet.Tests.Console.StaticTest "1" -- "0..1" PumlNet.Tests.Console.TestGeneric0TList1TItem
PumlNet.Tests.Console.OtherNamespace.Test1 "1" *-- "1..3" PumlNet.Tests.Console.Test
PumlNet.Tests.Console.OtherNamespace.Test1 "1" o-- "0..*" PumlNet.Tests.Console.AbstractTest

@enduml
